tests/input/semantic_errors/incompatibleTypes5.c
#include <fdfsdfq.h> // IS AGAIN VALID???
int main(){
    int* x;
    'a' + *x;
    return 1;
}
